--- a/src/SortingVisualizer/App.css
+++ b/src/SortingVisualizer/App.css
@@ -15,10 +15,10 @@
   overflow: hidden;
   background-image: linear-gradient(
     to bottom right,
-    #265077,
-    #022140,
+    #2d575d,
+    #2d575d,
     #494b68,
-    #1e4258,
+    #2d575d,
     #2d575d
   );
 }
